--- a/app/static/component/ticket/style.scss
+++ b/app/static/component/ticket/style.scss
@@ -1,3 +1,14 @@
 .ticket {
+  box-shadow: 0 1px 4px #5b89a4;
+  border-radius: 5px;
 
+  section {
+    &:first-child {
+      width: 200px;
+    }
+    &:last-child {
+      width: 366px;
+    }
+  }
 }
+
