--- a/app/static/component/ticket/style.scss
+++ b/app/static/component/ticket/style.scss
@@ -1,14 +1,104 @@
 .ticket {
-  box-shadow: 0 1px 4px #5b89a4;
-  border-radius: 5px;
+  box-shadow:       0 1px 4px #5b89a4;
+  border-radius:    5px;
+  display:          inline-flex;
+  width:            566px;
+  height:           161px;
+  background-color: #fff;
 
-  section {
+  & > section {
     &:first-child {
-      width: 200px;
+      width:        200px;
+      border-right: 1px solid #ECEFF1;
     }
     &:last-child {
       width: 366px;
     }
   }
+}
+
+.ticket-buy {
+  display:         flex;
+  flex-direction:  column;
+  justify-content: space-between;
+  align-items:     center;
+  align-content:   space-between;
+  height:          100%;
+  box-sizing:      border-box;
+  padding:         25px 20px;
+
+  & > header {
+    align-items: center;
+  }
+
+  & > footer {
+    & > button {
+      width:            160px;
+      height:           56px;
+      background-color: #FF6D00;
+      color:            #fff;
+      font-family:      Helvetica, "Helvetica Neue", Arial, sans-serif;
+      font-size:        16px;
+      cursor:           pointer;
+    }
+  }
+}
+
+.ticket-info {
+  display:        flex;
+  flex-direction: column;
+  height:         100%;
+  box-sizing:     border-box;
+  padding:        25px 20px;
+
+  & > header {
+    display:         flex;
+    justify-content: space-between;
+    align-items:     center;
+  }
+
+  & > footer {
+    display:         flex;
+    justify-content: space-between;
+  }
+}
+
+.ticket-time {
+  font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
+  font-size:   32px;
+  color:       #4A4A4A;
+}
+
+.ticket-place {
+  display:        flex;
+  flex-direction: column;
+  line-height:    18px;
+
+  & > header {
+    display:     inline-flex;
+    font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
+    font-size:   12px;
+    font-weight: 400;
+    color:       #4A4A4A;
+  }
+  & > footer {
+    display:     inline-flex;
+    font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
+    font-size:   12px;
+    color:       #8B9497;
+  }
+
+  &:first-child > footer {
+    justify-content: flex-start;
+  }
+  &:last-child > footer {
+    justify-content: flex-end;
+  }
+}
+
+.ticket-stops {
+  color:          #8B9497;
+  font-size:      10px;
+  text-transform: uppercase;
 }
 
