--- a/app/static/component/ticket/style.scss
+++ b/app/static/component/ticket/style.scss
@@ -39,6 +39,7 @@
       color:            #fff;
       font-family:      Helvetica, "Helvetica Neue", Arial, sans-serif;
       font-size:        16px;
+      line-height:      19px;
       cursor:           pointer;
     }
   }
@@ -49,17 +50,18 @@
   flex-direction: column;
   height:         100%;
   box-sizing:     border-box;
-  padding:        25px 20px;
+  padding:        22px 20px;
 
   & > header {
     display:         flex;
     justify-content: space-between;
-    align-items:     center;
+    padding:         0 7px;
   }
 
   & > footer {
     display:         flex;
     justify-content: space-between;
+    padding:         3px 7px 0;
   }
 }
 
@@ -97,8 +99,26 @@
 }
 
 .ticket-stops {
+  align-items:    center;
+  display:        flex;
+  flex-direction: column;
   color:          #8B9497;
   font-size:      10px;
   text-transform: uppercase;
+
+  header {
+    margin-top: 3px;
+  }
+
+  footer {
+    align-items: center;
+    display:     flex;
+
+    svg {
+      &:last-child {
+        margin-left: 3px;
+      }
+    }
+  }
 }
 
