--- a/app/static/component/app/style.scss
+++ b/app/static/component/app/style.scss
@@ -5,6 +5,10 @@ body {
   align-items:      center;
   justify-content:  center;
   background-color: #f3f7fa;
+
+  & > div {
+    display: flex;
+  }
 }
 
 .app-container {
