--- a/app/static/component/app/style.scss
+++ b/app/static/component/app/style.scss
@@ -1,4 +1,5 @@
 @import '../../../../node_modules/reset-css/reset';
+//@import './media.scss';
 
 body {
   display:          flex;
@@ -18,7 +19,7 @@ body {
   justify-content: center;
 
   & > header {
-    height:          164px;
+    height:          144px;
     align-content:   center;
     justify-content: center;
     align-items:     center;
@@ -26,6 +27,10 @@ body {
   }
 
   & > footer {
-    display: flex;
+    display:         flex;
+    flex-direction:  initial;
+    justify-content: center;
+    align-items:     flex-start;
+    flex-wrap:       wrap;
   }
 }
