--- a/app/static/component/app/style.scss
+++ b/app/static/component/app/style.scss
@@ -1,5 +1,5 @@
 @import '../../../../node_modules/reset-css/reset';
-//@import './media.scss';
+@import './media.scss';
 
 body {
   display:          flex;
