--- a/app/static/component/reportStats/pagination/style.scss
+++ b/app/static/component/reportStats/pagination/style.scss
@@ -24,6 +24,7 @@
   }
   &-prev {
     margin-right: 20px;
+    cursor:       pointer;
 
     &.-disabled {
       color: #929292;
@@ -31,6 +32,7 @@
   }
   &-next {
     margin-left: 20px;
+    cursor:      pointer;
 
     &.-disabled {
       color: #929292;
