--- a/app/static/component/app/style.scss
+++ b/app/static/component/app/style.scss
@@ -1,4 +1,4 @@
-@import '../../../../node_modules/reset-css/reset';
+@import 'node_modules/reset-css/reset.scss';
 
 .app-container {
   font-size: 14px;
