--- a/app/static/component/app/style.scss
+++ b/app/static/component/app/style.scss
@@ -4,7 +4,7 @@ body {
   display:          flex;
   align-items:      center;
   justify-content:  center;
-  background-color: #f3f7fa;
+  background-color: #e8ebf0;
 
   & > div {
     display: flex;
@@ -16,15 +16,18 @@ body {
   flex-direction:   column;
   align-content:    center;
   justify-content:  center;
-  margin-top:       10px;
-  background-color: #e0eaea;
-  border-radius:    5px;
+  background-color: white;
 
   & > header {
-    align-content:   center;
-    justify-content: center;
-    align-items:     center;
-    display:         flex;
+    align-content:    center;
+    justify-content:  center;
+    align-items:      center;
+    display:          flex;
+    background-color: rgb(86, 130, 163);
+    padding:          15px 0;
+    color:            white;
+    font-family:      Ubuntu;
+    font-size:        16px;
   }
 
   & > footer {
